noinst_LTLIBRARIES = libdataset.la
libdataset_la_SOURCES = \
	CacheKey.CacheValue.AVLMap.cc CacheKey.CacheValue.Map.cc \
	NormalTermPtr.DLList.cc PrefixRange.Plex.cc PrefixRange.XPlex.cc \
	SymID.Set.cc SymID.VHSet.cc SymbolConjunctPtr.Bag.cc \
	SymbolConjunctPtr.SplayBag.cc SymbolConjunctPtr.SplayNode.cc \
	unsigned.OXPSet.cc unsigned.Plex.cc unsigned.Set.cc \
	unsigned.XPlex.cc \
	CacheKey.CacheValue.AVLMap.h CacheKey.CacheValue.Map.h \
	CacheKey.defs.h NormalTermPtr.DLList.h NormalTermPtr.defs.h Pix.h \
	PrefixRange.Plex.h PrefixRange.XPlex.h PrefixRange.defs.h \
	SetOfSymID.hh SetOfUInt.hh SymID.Set.h SymID.VHSet.h SymID.defs.h \
	SymbolConjunctPtr.Bag.h SymbolConjunctPtr.SplayBag.h \
	SymbolConjunctPtr.SplayNode.h SymbolConjunctPtr.defs.h \
	prefixranges.hh unsigned.OXPSet.h unsigned.Plex.h unsigned.Set.h \
	unsigned.XPlex.h unsigned.defs.h
