noinst_LTLIBRARIES = libnormalform.la
libnormalform_la_SOURCES = \
	Filter.cc FilterOfASPath.cc FilterOfCommunity.cc FilterOfPrefix.cc \
	FilterOfSymbol.cc IPv6RadixSet.cc NE.cc NT.cc RadixSet.cc \
	SetOfIPv6Prefix.cc SetOfPrefix.cc SetOfSymbol.cc SymbolConjunct.cc \
	community.cc \
	Filter.hh FilterOfASPath.hh FilterOfCommunity.hh FilterOfPrefix.hh \
	FilterOfSymbol.hh FixedSizeAllocator.hh IPv6RadixSet.hh NE.hh NT.hh \
	RadixSet.hh SetOfIPv6Prefix.hh SetOfPrefix.hh SetOfSymbol.hh \
	Stack.hh SymbolConjunct.hh community.hh
